# sweetviz

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SWEETVIZ_REPORT_VERTICAL.html  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: test.yml
docs/examples/: SWEETVIZ_REPORT.html
sweetviz/: __init__.py  comet_ml_logger.py  config.py  dataframe_report.py  feature_config.py  from_dython.py  from_profiling_pandas.py  graph.py  graph_associations.py  graph_cat.py  graph_legend.py  graph_numeric.py  series_analyzer.py  series_analyzer_cat.py  series_analyzer_numeric.py  series_analyzer_text.py  sv_html.py  sv_html_formatters.py  sv_math.py  sv_public.py  sv_types.py  sweetviz_defaults.ini  type_detection.py  update_jquery.py  utils.py
sweetviz/mpl_styles/: graph_base.mplstyle  graph_target.mplstyle
sweetviz/templates/: dataframe_associations.html  dataframe_page.html  dataframe_summary.html  feature_detail_cat.html  feature_detail_numeric.html  feature_detail_text.html  feature_summary_base_stats.html  feature_summary_cat.html  feature_summary_numeric.html  feature_summary_target_cat.html  feature_summary_target_numeric.html  feature_summary_text.html  include_missing.html  sv_assets.css  sweetviz.css
sweetviz/templates/js/: sweetviz.js  sweetviz_vertical.js
tests/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_analyze.py  test_compare.py  test_compare_intra.py
tests/unit/: __init__.py  test_property_based.py  test_series_analyzer.py  test_type_detection.py
