[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sweetviz"]

[project]
name = "sweetviz"
version = "2.3.1"
authors = [
  { name = "Francois Bertrand", email = "fb@fbdesignpro.com" },
]
description = "A pandas-based library to visualize and compare datasets."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords=[
    "pandas",
    "data-science",
    "data-analysis",
    "python",
    "eda",
]
dependencies = [
    'pandas>=0.25.3,!=1.0.0,!=1.0.1,!=1.0.2',
    'numpy>=1.16.0',
    'matplotlib>=3.1.3',
    'tqdm>=4.43.0',
    'scipy>=1.3.2',
    'jinja2>=2.11.1',
    'importlib_resources>=5.0.0',
    'setuptools>=61.0.0,<81',
    'importlib_metadata;python_version<"3.8"',
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0",
  "pytest-datadir>=1.8.0",
  "hypothesis>=6.148.7",
]
dev = [
  "ruff>=0.14.9",
  "pyrefly>=0.46.0",
  "pre-commit>=4.5.1",
]
docs = [
  "sphinx>=8.1.3,<8.2",
  "myst_parser>=0.13.0",
  "sphinx_book_theme>=0.1.0",
  "sphinx_copybutton>=0.0.0",
  "sphinx_autodoc_typehints>=0.0.0",
  "furo>=2025.9.25",
]

[project.urls]
Homepage = "https://github.com/fbdesignpro/sweetviz"
"Bug Tracker" = "https://github.com/fbdesignpro/sweetviz/issues"
Discussions = "https://github.com/fbdesignpro/sweetviz/discussions"
Changelog = "https://github.com/fbdesignpro/sweetviz/releases"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short --cov=sweetviz -n auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "hypothesis: marks tests that use hypothesis property-based testing",
    "smoke: quick smoke tests for basic functionality",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
]

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (required for ruff's isort functionality)
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "docs",
    "sweetviz/fonts",
    "sweetviz/mpl_styles",
    "sweetviz/templates",
    "tests/fixtures",
    "tests/data",
    "*.egg-info",
]

[tool.ruff.lint]
# Pyflakes settings
ignore-init-module-imports = true
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyrefly]
# Pyrefly configuration for type checking
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_locals = true

[tool.coverage.run]
source = ["sweetviz"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.*",
    "*/setup.py",
    "*/build/*",
    "*/dist/*",
    "*/docs/*",
    "*/examples/*",
    "*/fonts/*",
    "*/mpl_styles/*",
    "*/templates/*",
    "*/.git/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*Test.*",
    "@abc.abstractmethod",
]
fail_under = 0
precision = 2

[tool.coverage.html]
directory = "htmlcov"
title = "Sweetviz Test Coverage"
